# houmao

./: .gitattributes  .gitignore  .gitmodules  .vsfavorite  AGENTS.md  CAO_RX_EXTRACTION_EXAMPLES.md  CAO_RX_MONITOR_ANALYSIS.md  CAO_RX_MONITOR_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DEVLEPMENT-SETUP.md  GEMINI.md  NOTICE  README.md  README_CAO_RX_ANALYSIS.md  START_HERE.txt  docs_hooks.py  events.json  mkdocs.yml  payload.json  pyproject.toml  schema.txt  summary.md
.agent-automation/tmp-brain-check/manifests/: tmp-check-home.yaml
.claude/skills/: houmao-agent-loop-lite
.codex/skills/: do-interactive-test  houmao-agent-loop-pro  houmao-launch-agents
.github/: copilot-instructions.md
.github/skills/: claude-code-install  claude-code-invoke-once  claude-code-invoke-persist  codex-cli-install  copilot-invoke-once  hack-through-testing  impl-via-git-worktree  make-program-tutorial  mermaid-graphing  openspec-ext-explain  openspec-ext-hack-through-test  openspec-ext-respond-to-review  openspec-ext-review-plan  openspec-ext-revise-by-decision
.github/workflows/: docs.yml  pypi-release.yml  sync-houmao-skills.yml
apps/: README.md
apps/ag-ui-workbench/: .gitignore  README.md  index.html  package.json  playwright.config.ts  playwright.real-agent.config.ts  tsconfig.json  vite.config.ts
apps/ag-ui-workbench/scripts/: agUiDebugAgentPlugin.ts  agUiProxyPlugin.ts  tmuxPlugin.ts
apps/ag-ui-workbench/src/: App.tsx  main.tsx  storage.ts  styles.css  workbenchContext.tsx
apps/ag-ui-workbench/tests/: fakeAgUiServer.ts  realAgentGuiSmoke.spec.ts  runtime.spec.ts  server.spec.ts  workbench.spec.ts
config/cao-server-launcher/: local.toml
context/: README.md
context/design/: README.md  state-tracking-goal.md
context/design/behaviour/: how-skill-is-installed-into-agents.md
context/design/future/: distributed-agent-architecture.md  distributed-agent-migration-path-greenfield.md  distributed-agent-migration-path.md
context/design/migration/: houmao-server-filesystem-vs-memory.md
context/design/namings/: module-naming.md  project-naming.md  tool-names-suggestions.md
context/features/2026-07-11-houmao-dev-testing/: README.md
context/features/2026-07-24-agent-loop-correctness-evaluator/: README.md  agent-task.md  feature-requirement.md
context/hints/: README.md  about-python-email-systems.md  about-shared-registry-design.md  agent-identity-resolution.md  howto-git-snapshot-branch-without-switching.md  howto-inject-network-error.md  howto-run-tmux-pty-bridge-across-node-and-bun.md  howto-tmux-send-keys.md
context/instructions/: README.md  git-by-proxy-jump.md  pg-hosting-pixi.md  review-via-claude-code.md  review-via-copilot.md
context/issues/: README.md
context/issues/enhance/: 20260409-codex-unattended-launch-should-preseed-model-migrations.md  README.md  enhance-agent-def-dir-inspection-and-selector-listing.md  enhance-agent-id-first-class-cross-module-identity.md  enhance-api-credential-profiles-publish-capacity-hints.md  enhance-cli-agent-test-fixtures-use-dummy-projects-and-fast-roles.md  enhance-gateway-attach-for-serverless-local-interactive-tui-agents.md  enhance-gateway-tui-state-tracking-for-local-interactive-sessions.md  enhance-houmao-server-cli-defaults-should-share-config-constants.md  enhance-mail-send-requires-full-mailbox-address.md  enhance-mail-subcommand-removes-instruction-argument.md  enhance-mailbox-join-name-conflict-resolution-modes.md  enhance-mailbox-runtime-smoke-tests-use-minimal-sender-prompts.md  enhance-remove-dead-child-cao-manager.md  enhance-shadow-watch-user-visible-state-stability-window.md
context/issues/features/: README.md  (+10 more)
context/logs/: README.md
context/plans/: README.md  plan-finish-manifest-first-gateway-cutover.md  plan-recapture-and-relabel-shared-tui-demo-corpus.md  plan-replay-shared-tui-demo-and-fix-state-tracking-bugs.md
context/refcode/: README.md
context/roles/: README.md
context/rules/: README.md
context/skills/: README.md
context/summaries/: README.md
context/tasks/: README.md  task-anything.md
context/tools/: README.md
dockers/email-system/: README.md  compose.yaml  down.sh  env.example  provision_stalwart.py  smoke_mail_flow.py  up.sh  verify.sh
docs/: index.md
docs/getting-started/: agent-definitions.md  easy-specialists.md  launch-profiles.md  loop-authoring.md  managed-memory-dirs.md  overview.md  quickstart.md  system-skills-overview.md
docs/migration/: runtime_migration_parity_checklist.md  runtime_migration_report.md
docs/reference/: agents_brains.md  brain_launch_runtime.md  brain_launch_runtime_send_keys.md  cao_claude_shadow_parsing.md  cao_interactive_demo.md  cao_server_launcher.md  cao_shadow_parser_troubleshooting.md  claude-vendor-login-files.md  cli.md  codex-cao-approval-prompt-troubleshooting.md  houmao_server_agent_api_live_suite.md  houmao_server_pair.md  index.md  mailbox.md  managed_agent_api.md  realm_controller.md  realm_controller_send_keys.md  release-publishing.md  terminal_record.md
docs/resources/: README.md
examples/writer-team/: .gitignore  README.md
scripts/: README.md  check_system_skill_versions.py  generate_plotly_trace_catalog.py
scripts/agents/: build_brain_home.py
scripts/demo/: README.md
scripts/openspec/: audit_archive_history.sh
scripts/parity/: check_runtime_parity.sh
skillset/: README.md  runtime
skillset/dev/: README.md
src/gig_agents/: __init__.py  cao_cli.py  cli.py
src/houmao/: __init__.py  cao_cli.py  cli.py  owned_mutation.py  owned_paths.py  terminology.py  version.py
tests/manual/: manual_claude_official_login_smoke.py  manual_headless_tmux_smoke.py  manual_houmao_server_agent_api_live_suite.py  manual_mailbox_roundtrip_real_agent_smoke.py  manual_passive_server_gateway_proxy.py  manual_passive_server_http_lifecycle.py  manual_passive_server_registry_discovery.py
tests/unit/: conftest.py  test_owned_paths.py  test_packaging_entrypoints.py
tests/workflow/: test-agent-gateway-tui-state-tracking.md
tools/: __init__.py
tools/terminal_record/: README.md  __init__.py  __main__.py  cli.py
(+6886 files in other folders)
