[project]
name = "Houmao"
version = "0.3.2"
description = "Houmao runtime package for realm controller and CAO launcher workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "igamenovoer", email = "igamenovoer@xx.com" }]
license = { file = "LICENSE" }
keywords = ["agents", "runtime", "cao", "tmux", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.3.1,<9",
  "fastapi>=0.135.1,<0.136",
  "libtmux>=0.55.0,<0.56",
  "packaging>=24,<27",
  "Pillow>=11,<13",
  "platformdirs>=4.9.4,<5",
  "pydantic>=2.12,<3",
  "PyYAML>=6.0,<7",
  "reactivex>=4.1.0,<5",
  "rich>=14.3.3,<15",
  "starlette>=0.46,<2",
  "uvicorn>=0.41.0,<0.42",
]

[project.scripts]
houmao-cli = "houmao.cli:main"
houmao-cao-server = "houmao.cao_cli:main"
houmao-server = "houmao.server.cli:main"
houmao-mgr = "houmao.srv_ctrl.cli:main"
houmao-passive-server = "houmao.passive_server.cli:main"

[project.urls]
Homepage = "https://github.com/igamenovoer/houmao"
Repository = "https://github.com/igamenovoer/houmao"
Issues = "https://github.com/igamenovoer/houmao/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "tests/**",
  "scripts/**",
  "docs/**",
  "openspec/**",
  "examples/**",
  "tmp/**",
  "config/**",
  ".houmao/**",
  "**/*.env",
  "**/credentials.json",
  "**/auth.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/houmao"]
only-include = ["src/houmao"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src/houmao", "README.md", "LICENSE", "NOTICE", "pyproject.toml"]
exclude = [
  "tests/**",
  "scripts/**",
  "docs/**",
  "openspec/**",
  "examples/**",
  "tmp/**",
  "config/**",
  ".houmao/**",
  "**/*.env",
  "**/credentials.json",
  "**/auth.json",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
houmao = { path = ".", editable = true }
av = ">=17.0.0,<18"
build = ">=1.3.0,<2"
httpx = ">=0.28.1,<0.29"
hydra-core = ">=1.3.2,<2"
imageio = ">=2.37.3,<3"
mail-parser = ">=4.1.4,<5"
matplotlib = ">=3.10.8,<4"
mdutils = ">=1.8.1,<2"
memory-fs = ">=0.41.0,<0.42"
mkdocs = ">=1.6,<2"
mkdocs-material = ">=9.7.4,<10"
omegaconf = ">=2.3.0,<3"
opencv-python = ">=4.13.0.92,<5"
pymdown-extensions = ">=10,<11"
scipy = ">=1.17.1,<2"
twine = ">=6.2.0,<7"
typed-ffmpeg = ">=3.11,<4"
typer = ">=0.24.1,<0.25"
types-PyYAML = ">=6.0.12.20250915,<7"

[tool.pixi.dependencies]
jq = ">=1.8,<2"
mypy = ">=1.19.1,<2"
pip = ">=25,<26"
python = "3.13.*"
pytest = ">=9.0.2,<10"
ruff = ">=0.15.0,<0.16"

[tool.pixi.tasks]
asciinema = { cmd = "./extern/orphan/bin/asciinema-x86_64-unknown-linux-gnu", description = "Run the locally downloaded asciinema standalone binary" }
docs-build = { cmd = "mkdocs build --strict", description = "Build the MkDocs documentation site" }
docs-serve = { cmd = "mkdocs serve --dev-addr 127.0.0.1:8000", description = "Serve the MkDocs documentation site locally" }
format = { cmd = "ruff format src tests docs scripts", description = "Format runtime source, tests, docs, and scripts" }
lint = { cmd = "ruff check src tests docs scripts", description = "Run Ruff lint checks" }
typecheck = { cmd = "mypy src", description = "Run strict mypy checks" }
test = { cmd = "python -m pytest tests/unit", description = "Run destination unit tests" }
test-runtime = { cmd = "python -m pytest tests/unit/agents tests/unit/cao", description = "Run runtime-focused unit suites" }
build-dist = { cmd = "python -m build --sdist --wheel", description = "Build sdist and wheel artifacts" }
check-dist = { cmd = "python -m twine check dist/*", description = "Validate built package metadata" }
install-global-tool = { cmd = "uv tool install --force .", description = "Install the current checkout as a global uv tool, replacing any existing houmao tool install" }

[tool.pixi.feature.pg-hosting.dependencies]
postgresql = ">=18.3,<19"
pgvector = ">=0.8.1,<0.9"
pgcli = ">=4.4.0,<5"

[tool.pixi.feature.gui.dependencies]
go = "1.23.*"
tmux = ">=3.5,<4"
make = ">=4.4.1,<5"

[tool.pixi.feature.pg-hosting.tasks]
pg-init = { cmd = 'bash -lc "mkdir -p tmp/pg-hosting; printf \"%s\" \"postgres\" > tmp/pg-hosting/pwfile; chmod 600 tmp/pg-hosting/pwfile; rm -rf tmp/pg-hosting/pgdata; initdb -D tmp/pg-hosting/pgdata --username=postgres --pwfile=tmp/pg-hosting/pwfile --auth-host=scram-sha-256 --auth-local=trust"', description = "Initialize a fresh local Postgres cluster under tmp/pg-hosting with dev credentials" }
pg-start = { cmd = "bash -lc 'ROOT=\"$(pwd)/tmp/pg-hosting\"; mkdir -p \"$ROOT/sock\"; pg_ctl -D \"$ROOT/pgdata\" -l \"$ROOT/postgres.log\" -o \"-p 55432 -k $ROOT/sock -c listen_addresses=127.0.0.1\" start'", description = "Start Postgres in background on localhost using non-default port 55432" }
pg-stop = { cmd = 'bash -lc "pg_ctl -D tmp/pg-hosting/pgdata stop -m fast"', description = "Stop local Postgres started from tmp/pg-hosting" }
pg-ready = { cmd = "bash -lc 'ROOT=\"$(pwd)/tmp/pg-hosting\"; pg_isready -h 127.0.0.1 -p 55432 && pg_isready -h \"$ROOT/sock\" -p 55432'", description = "Check Postgres readiness over TCP and unix socket" }
pg-enable-vector = { cmd = 'bash -lc "psql \"postgresql://postgres:postgres@127.0.0.1:55432/postgres\" -c \"CREATE EXTENSION IF NOT EXISTS vector;\""', description = "Enable pgvector extension in target database" }
pg-psql = { cmd = 'bash -lc "psql \"postgresql://postgres:postgres@127.0.0.1:55432/postgres\""', description = "Open psql against local pg-hosting instance over TCP" }

[tool.pixi.feature.gui.tasks]
webtmux-build = { cmd = "bash -lc 'cd extern/orphan/webtmux && make build'", description = "Build the local webtmux checkout for the current platform" }
webtmux-run = { cmd = "bash -lc 'cd extern/orphan/webtmux && ./webtmux -w tmux new-session -A -s main'", description = "Run the locally built webtmux binary against tmux with write access" }

[tool.pixi.environments]
pg-hosting = { features = ["pg-hosting"], no-default-feature = true }
gui = { features = ["gui"], no-default-feature = true }
